fix(2fa): Vertical align the 2FA icons with the name

--- a/apps/settings/css/settings.scss
+++ b/apps/settings/css/settings.scss
@@ -423,7 +423,6 @@ table.nostyle {
 	.two-factor-provider-settings-icon {
 		width: 16px;
 		height: 16px;
-		vertical-align: sub;
 		filter: var(--background-invert-if-dark);
 	}
 }
